# minio-xml-oxidator

./: Cargo.toml  Dockerfile  README.md  build.rs  config.toml
proto/: validator.proto
src/: config.rs  lib.rs  main.rs
src/grpc/: convert.rs  mod.rs  service.rs
src/minio/: client.rs  download.rs  mod.rs
src/registry/: mod.rs
src/validators/: mod.rs
tests/: integration_test.rs
