[package]
name = "minio-xml-validator"
version = "0.1.0"
edition = "2024"

[lib]
name = "minio_xml_validator"
path = "src/lib.rs"

[[bin]]
name = "minio-xml-validator"
path = "src/main.rs"

[dependencies]
xml-oxydizer = { path = "../xml-validator", features = ["macros"] }

tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

minio = { version = "0.4", default-features = false, features = ["rustls-tls", "http2", "default-crypto"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

crossbeam-channel = "0.5"
bytes = "1"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "2.0"
anyhow = "1"

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3"
